--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> https://www.w3schools.com</title>
-	<link rel="stylesheet" href="H:\web\CSS\css/w3school_C.css">
+	<link rel="stylesheet" href="H:\web\CSS\css\w3school_C.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="H:\fontawesome-free-5.15.1-web\css\all.css">
 <style>
