--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="H:\fontawesome-free-5.15.1-web\css\all.css">
-	<link rel="stylesheet" href="H:\web\CSS\css\w3school_C.css">
+	<link rel="stylesheet" href="css\w3school_C.css">
 </head>
 <body>
 	<div class="upp">
